--- a/.github/workflows/distribution.yml
+++ b/.github/workflows/distribution.yml
@@ -37,9 +37,9 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
           COMMIT_MESSAGE: "Update binaries to ${{ steps.get_release.outputs.release }}"
-          COMMIT_USER_NAME: "GitHub Actions"
+          COMMIT_USER_NAME: "xe-nvdk"
           COMMIT_USER_EMAIL: "ignacio@voltmetrix.com"
-          COMMIT_AUTHOR: "GitHub Actions"
+          COMMIT_AUTHOR: "xe-nvdk"
           COMMIT_AUTHOR_EMAIL: "ignacio@voltmetrix.com"
           BRANCH: "main"
           FILES: "linux/voltmetrix windows/voltmetrix.exe"
