--- a/.github/workflows/distribution.yml
+++ b/.github/workflows/distribution.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout get.voltmetrix.com code
         uses: actions/checkout@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.AMEEGO }}
 
       - name: Get latest release information
         id: get_release
